# NASA-Task-Load-Index-TLI

./: .replit  database.py  guidance.py  main.py  nasa_tlx.db  nasa_tlx.py  pyproject.toml  replit.nix  styles.py  visualizations.py
