[tool.poetry]
name = "repl-nix-taskloadnavigator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
plotly = "^5.24.0"
pandas = "^2.2.2"
streamlit-extras = "^0.4.7"
sqlalchemy = "^2.0.34"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
